# AYMB_WhatsApp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  README_M6_PIPELINE.md  README_M6_UI.md  WhatsApp Chat with Sultana AYMB.txt  claude.md  codex.md  exceptions.csv  pyproject.toml  requirements.txt  temp_asr.txt
.claude/: settings.local.json
config/: asr.yaml  media.yaml
schema/: message.schema.json  metrics.schema.json  run_manifest.schema.json
scripts/: WhatsAppTranscriberUI.bat  check_schema.py  debug_asr.py  launcher.py  parse_chat.py  render_md.py  render_preview.py  render_txt.py  resolve_media.py  run_contracts.py  run_pipeline.py  run_pipeline_contracts.py  transcribe_audio.py  ui_app.py
src/: __init__.py  audio_transcriber.py  media_resolver.py  parser_agent.py
tests/: __init__.py  conftest.py  test_asr_client_google.py  test_asr_client_whisper.py  test_asr_error_mapping_realistic.py  test_asr_language_hints_plumbing.py  test_asr_provider_error_mapping.py  test_audio_chunking_hardening.py  test_audio_cli.py  test_audio_transcriber.py  test_contract_runner.py  test_contracts_stage.py  test_cost.py  test_derived_asr_provider_model.py  test_google_asr_backend.py  test_launcher_imports.py  test_manifest_and_metrics_golden.py  test_manifest_schema_basic.py  test_markdown_renderer.py  test_media_acceptance.py  test_media_config.py  test_media_drift.py  test_media_index.py  test_media_resolver.py  test_message_schema.py  test_metrics_schema_basic.py  test_parser_basic.py  test_pipeline_config.py  test_pipeline_manifest.py  test_pipeline_metrics.py  (+10 more)
(+45 files in other folders)
